[gd_scene load_steps=6 format=2]

[ext_resource path="res://Wheel.gd" type="Script" id=1]
[ext_resource path="res://wheel.png" type="Texture" id=2]
[ext_resource path="res://here.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 116.295, 10.9247 )

[sub_resource type="CircleShape2D" id=2]
radius = 47.115

[node name="Wheel" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -3.92699
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="0" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="0"]
position = Vector2( 100.133, 98.0712 )
rotation = 2.35619
shape = SubResource( 1 )

[node name="1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="1"]
position = Vector2( -101.483, 93.1869 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="2"]
position = Vector2( -101.186, -97.976 )
rotation = 2.35619
shape = SubResource( 1 )

[node name="3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="3"]
position = Vector2( 102.863, -97.8644 )
rotation = 0.785398
shape = SubResource( 1 )

[node name="centre" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="centre"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="centre"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="0" to="." method="_on_0_body_entered"]
[connection signal="body_entered" from="1" to="." method="_on_1_body_entered"]
[connection signal="body_entered" from="2" to="." method="_on_2_body_entered"]
[connection signal="body_entered" from="3" to="." method="_on_3_body_entered"]
[connection signal="body_entered" from="centre" to="." method="_on_centre_body_entered"]
